--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/scissor.svg" />
+    <link rel="preload" href="src/index.css" as="style" onload="this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="src/index.css"></noscript>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BarberApp</title>
   </head>
